calico-logs/calico-diagnostics/per-node-calico-logs/calico-node-cmskr/iptables-save.txt
# Generated by iptables-save v1.8.2 on Tue Sep 29 12:39:19 2020
*raw
:PREROUTING ACCEPT [70569:56339133]
:OUTPUT ACCEPT [57200:6526912]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
[70569:56339133] -A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
[57200:6526912] -A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
[57200:6526912] -A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
[57200:6526912] -A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
[0:0] -A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
[70569:56339133] -A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
[12030:835668] -A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
[0:0] -A cali-PREROUTING -m comment --comment "cali:V6ooGP15glg7wm91" -m mark --mark 0x40000/0x40000 -m rpfilter --invert -j DROP
[58539:55503465] -A cali-PREROUTING -m comment --comment "cali:RMTzKqp0j735XfY4" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
[0:0] -A cali-PREROUTING -m comment --comment "cali:T8-Zfumo2dKygI73" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Tue Sep 29 12:39:19 2020
# Generated by iptables-save v1.8.2 on Tue Sep 29 12:39:19 2020
*mangle
:PREROUTING ACCEPT [2861:208125]
:INPUT ACCEPT [55367:51049500]
:FORWARD ACCEPT [15202:5289633]
:OUTPUT ACCEPT [57200:6526912]
:POSTROUTING ACCEPT [72402:11816545]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
[70569:56339133] -A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
[67708:56131008] -A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
[2861:208125] -A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
[0:0] -A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Tue Sep 29 12:39:19 2020
# Generated by iptables-save v1.8.2 on Tue Sep 29 12:39:19 2020
*nat
:PREROUTING ACCEPT [16:960]
:INPUT ACCEPT [16:960]
:OUTPUT ACCEPT [719:47690]
:POSTROUTING ACCEPT [719:47690]
:DOCKER - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2GFESPSWZI6F32XN - [0:0]
:KUBE-SEP-5P4JQKGQ7NDLIDZ2 - [0:0]
:KUBE-SEP-BZNDTVMXX5P7J7RX - [0:0]
:KUBE-SEP-FB3CAPOJHL4P7DCL - [0:0]
:KUBE-SEP-GYXMBXG4OIK5QITO - [0:0]
:KUBE-SEP-L2WXCXLBWVOOHEN6 - [0:0]
:KUBE-SEP-NTF2NJOEHP2ZZKOI - [0:0]
:KUBE-SEP-RJR6KRXP2ERQWQXR - [0:0]
:KUBE-SEP-S6OFPHD6CL3OGF4J - [0:0]
:KUBE-SEP-ZC6HA6DIPNSMLVGH - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-RK657RLKDNVNU64O - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
[55:3201] -A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
[62:3621] -A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[61:5207] -A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
[3530:234791] -A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
[3696:246758] -A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[1:60] -A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
[3535:235116] -A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
[3777:252422] -A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
[0:0] -A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
[0:0] -A DOCKER -i docker0 -j RETURN
[0:0] -A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
[17:1020] -A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
[719:47690] -A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
[16:960] -A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
[16:960] -A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
[0:0] -A KUBE-SEP-2GFESPSWZI6F32XN -s 10.0.0.10/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
[12:720] -A KUBE-SEP-2GFESPSWZI6F32XN -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 10.0.0.10:6443
[0:0] -A KUBE-SEP-5P4JQKGQ7NDLIDZ2 -s 10.48.66.130/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-5P4JQKGQ7NDLIDZ2 -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.48.66.130:9153
[0:0] -A KUBE-SEP-BZNDTVMXX5P7J7RX -s 10.48.231.1/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-BZNDTVMXX5P7J7RX -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.48.231.1:53
[0:0] -A KUBE-SEP-FB3CAPOJHL4P7DCL -s 10.48.231.1/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-FB3CAPOJHL4P7DCL -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.48.231.1:53
[1:60] -A KUBE-SEP-GYXMBXG4OIK5QITO -s 10.0.0.12/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
[1:60] -A KUBE-SEP-GYXMBXG4OIK5QITO -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 10.0.0.12:5473
[0:0] -A KUBE-SEP-L2WXCXLBWVOOHEN6 -s 10.48.231.1/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-L2WXCXLBWVOOHEN6 -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.48.231.1:9153
[0:0] -A KUBE-SEP-NTF2NJOEHP2ZZKOI -s 10.48.66.130/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-NTF2NJOEHP2ZZKOI -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.48.66.130:53
[0:0] -A KUBE-SEP-RJR6KRXP2ERQWQXR -s 10.0.0.10/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
[2:120] -A KUBE-SEP-RJR6KRXP2ERQWQXR -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 10.0.0.10:5473
[0:0] -A KUBE-SEP-S6OFPHD6CL3OGF4J -s 10.48.66.130/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-S6OFPHD6CL3OGF4J -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.48.66.130:53
[0:0] -A KUBE-SEP-ZC6HA6DIPNSMLVGH -s 10.0.0.11/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
[1:60] -A KUBE-SEP-ZC6HA6DIPNSMLVGH -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 10.0.0.11:5473
[12:720] -A KUBE-SERVICES ! -s 10.48.0.0/16 -d 10.49.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
[12:720] -A KUBE-SERVICES -d 10.49.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
[0:0] -A KUBE-SERVICES ! -s 10.48.0.0/16 -d 10.49.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SERVICES -d 10.49.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
[0:0] -A KUBE-SERVICES ! -s 10.48.0.0/16 -d 10.49.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SERVICES -d 10.49.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
[0:0] -A KUBE-SERVICES ! -s 10.48.0.0/16 -d 10.49.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SERVICES -d 10.49.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
[4:240] -A KUBE-SERVICES ! -s 10.48.0.0/16 -d 10.49.32.99/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-MARK-MASQ
[4:240] -A KUBE-SERVICES -d 10.49.32.99/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-SVC-RK657RLKDNVNU64O
[491:32844] -A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
[0:0] -A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-BZNDTVMXX5P7J7RX
[0:0] -A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-NTF2NJOEHP2ZZKOI
[0:0] -A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-L2WXCXLBWVOOHEN6
[0:0] -A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-SEP-5P4JQKGQ7NDLIDZ2
[12:720] -A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-2GFESPSWZI6F32XN
[2:120] -A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-RJR6KRXP2ERQWQXR
[1:60] -A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ZC6HA6DIPNSMLVGH
[1:60] -A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-SEP-GYXMBXG4OIK5QITO
[0:0] -A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-FB3CAPOJHL4P7DCL
[0:0] -A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-S6OFPHD6CL3OGF4J
[3530:234791] -A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
[3535:235116] -A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
[3535:235116] -A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
[0:0] -A cali-POSTROUTING -o vxlan.calico -m comment --comment "cali:e9dnSgSVNmIcpVhP" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
[55:3201] -A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
[5:325] -A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE --random-fully
COMMIT
# Completed on Tue Sep 29 12:39:19 2020
# Generated by iptables-save v1.8.2 on Tue Sep 29 12:39:19 2020
*filter
:INPUT ACCEPT [9839:4651846]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [10751:1517226]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-fw-cali73f4a3ef1b5 - [0:0]
:cali-fw-cali8d1cf452527 - [0:0]
:cali-pri-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.calico-system - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.calico-system - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-tw-cali73f4a3ef1b5 - [0:0]
:cali-tw-cali8d1cf452527 - [0:0]
:cali-wl-to-host - [0:0]
[55376:51058176] -A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
[2987:215488] -A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[2987:215488] -A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
[81515:241735498] -A INPUT -j KUBE-FIREWALL
[15202:5289633] -A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
[5:325] -A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
[5:325] -A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[5:325] -A FORWARD -j DOCKER-USER
[5:325] -A FORWARD -j DOCKER-ISOLATION-STAGE-1
[0:0] -A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A FORWARD -o docker0 -j DOCKER
[0:0] -A FORWARD -i docker0 ! -o docker0 -j ACCEPT
[0:0] -A FORWARD -i docker0 -o docker0 -j ACCEPT
[5:325] -A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
[57210:6543892] -A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
[4218:295940] -A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[87181:8986942] -A OUTPUT -j KUBE-FIREWALL
[0:0] -A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
[5:325] -A DOCKER-ISOLATION-STAGE-1 -j RETURN
[0:0] -A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
[0:0] -A DOCKER-ISOLATION-STAGE-2 -j RETURN
[5:325] -A DOCKER-USER -j RETURN
[0:0] -A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
[0:0] -A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
[0:0] -A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
[0:0] -A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[15202:5289633] -A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
[15202:5289633] -A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
[7583:472184] -A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
[7619:4817449] -A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
[5:325] -A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
[0:0] -A cali-INPUT -p udp -m comment --comment "cali:w7ud0UgQSEi_zKuQ" -m comment --comment "Allow VXLAN packets from whitelisted hosts" -m multiport --dports 4789 -m set --match-set cali40all-vxlan-net src -m addrtype --dst-type LOCAL -j ACCEPT
[0:0] -A cali-INPUT -p udp -m comment --comment "cali:4cgmbdWsLmozYhJh" -m comment --comment "Drop VXLAN packets from non-whitelisted hosts" -m multiport --dports 4789 -m addrtype --dst-type LOCAL -j DROP
[4447:363484] -A cali-INPUT -i cali+ -m comment --comment "cali:t45BUBhpu3Wsmi1_" -g cali-wl-to-host
[0:0] -A cali-INPUT -m comment --comment "cali:NOmsycyknYZaGOFf" -m mark --mark 0x10000/0x10000 -j ACCEPT
[50929:50694692] -A cali-INPUT -m comment --comment "cali:Or0B7eoenKO2p8Bf" -j MARK --set-xmark 0x0/0xf0000
[50929:50694692] -A cali-INPUT -m comment --comment "cali:AmIfvPGG2lYUK6mj" -j cali-from-host-endpoint
[0:0] -A cali-INPUT -m comment --comment "cali:79fWWn1SpufdO7SE" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
[0:0] -A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
[4682:359741] -A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
[0:0] -A cali-OUTPUT -p udp -m comment --comment "cali:R_U4Bsx2wPE7s0j6" -m comment --comment "Allow VXLAN packets to other whitelisted hosts" -m multiport --dports 4789 -m addrtype --src-type LOCAL -m set --match-set cali40all-vxlan-net dst -j ACCEPT
[52528:6184151] -A cali-OUTPUT -m comment --comment "cali:tQyQykplzpOIOeFr" -j MARK --set-xmark 0x0/0xf0000
[52528:6184151] -A cali-OUTPUT -m comment --comment "cali:xcAo5GohWMuvjq1D" -j cali-to-host-endpoint
[0:0] -A cali-OUTPUT -m comment --comment "cali:dZnsb3BNQ34HxBS5" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
[9792:671103] -A cali-from-wl-dispatch -i cali73f4a3ef1b5 -m comment --comment "cali:ECLeLCYZq5pzZ6Qt" -g cali-fw-cali73f4a3ef1b5
[2163:155799] -A cali-from-wl-dispatch -i cali8d1cf452527 -m comment --comment "cali:gh2tavPP1h893yat" -g cali-fw-cali8d1cf452527
[0:0] -A cali-from-wl-dispatch -m comment --comment "cali:M_fE2FZwKgMO75sB" -m comment --comment "Unknown interface" -j DROP
[9788:670838] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:-PMT3RO05jT3gH9v" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:uqPpukjDXhu9dTys" -m conntrack --ctstate INVALID -j DROP
[4:265] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:bH5or6oXZKUZNcz9" -j MARK --set-xmark 0x0/0x10000
[0:0] -A cali-fw-cali73f4a3ef1b5 -p udp -m comment --comment "cali:IT13ko-vh972pEoP" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
[0:0] -A cali-fw-cali73f4a3ef1b5 -p ipv4 -m comment --comment "cali:nm2jWPfJPTNJZnmw" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
[4:265] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:kK6Jnn5m3MIObRjx" -j cali-pro-kns.kube-system
[4:265] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:KdXYHJfTnTuv16mr" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:48OwNagQoX4LBM0U" -j cali-pro-_u2Tn2rSoAPffvE7JO6
[0:0] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:tiPTi_zXbxYLS-98" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-fw-cali73f4a3ef1b5 -m comment --comment "cali:xN4zvDK_Y2iPipG8" -m comment --comment "Drop if no profiles matched" -j DROP
[2237:164505] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:IdjfsC3Wk-264DgM" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:rXjh1cioi8iaWMy6" -m conntrack --ctstate INVALID -j DROP
[1:60] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:MOgmPn1sKYL1Eq1F" -j MARK --set-xmark 0x0/0x10000
[0:0] -A cali-fw-cali8d1cf452527 -p udp -m comment --comment "cali:Z5IlR8u8v3MsXIZy" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
[0:0] -A cali-fw-cali8d1cf452527 -p ipv4 -m comment --comment "cali:xsmxtqkrEZDCICaa" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
[1:60] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:p7CAVcbNRIIJFtVz" -j cali-pro-kns.calico-system
[1:60] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:rgaBjS0L1h7_OlGH" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:TVGwbKoiw2rqulew" -j cali-pro-_nzzjLvInId1gPHmQz_
[0:0] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:Rm4umlxODOq5sC21" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-fw-cali8d1cf452527 -m comment --comment "cali:0HgDP4LjBkcTKtxx" -m comment --comment "Drop if no profiles matched" -j DROP
[0:0] -A cali-pri-kns.calico-system -m comment --comment "cali:lA1GbGF0y5VU72nH" -j MARK --set-xmark 0x10000/0x10000
[0:0] -A cali-pri-kns.calico-system -m comment --comment "cali:E1m1FietzlJfN7WE" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-pri-kns.kube-system -m comment --comment "cali:zoH5gU6U55FKZxEo" -j MARK --set-xmark 0x10000/0x10000
[0:0] -A cali-pri-kns.kube-system -m comment --comment "cali:bcGRIJcyOS9dgBiB" -m mark --mark 0x10000/0x10000 -j RETURN
[1:60] -A cali-pro-kns.calico-system -m comment --comment "cali:bTgyjfwHbUZu3xg3" -j MARK --set-xmark 0x10000/0x10000
[1:60] -A cali-pro-kns.calico-system -m comment --comment "cali:YRkGp3QlDi9-gZhH" -m mark --mark 0x10000/0x10000 -j RETURN
[4:265] -A cali-pro-kns.kube-system -m comment --comment "cali:-50oJuMfLVO3LkBk" -j MARK --set-xmark 0x10000/0x10000
[4:265] -A cali-pro-kns.kube-system -m comment --comment "cali:ztVPKv1UYejNzm1g" -m mark --mark 0x10000/0x10000 -j RETURN
[5343:3148563] -A cali-to-wl-dispatch -o cali73f4a3ef1b5 -m comment --comment "cali:FDfK684OIQGmjpR1" -g cali-tw-cali73f4a3ef1b5
[2198:1525632] -A cali-to-wl-dispatch -o cali8d1cf452527 -m comment --comment "cali:Y2Y0bw7leU537b-C" -g cali-tw-cali8d1cf452527
[0:0] -A cali-to-wl-dispatch -m comment --comment "cali:gEBZvd0n9otmBnOh" -m comment --comment "Unknown interface" -j DROP
[5343:3148563] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:dwaFxF0Orb4N4COx" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:8OZ_1v3rbsc5aGzu" -m conntrack --ctstate INVALID -j DROP
[0:0] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:v_FKzEjFBeyOYU39" -j MARK --set-xmark 0x0/0x10000
[0:0] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:gbRiYc9KPvSBwhHF" -j cali-pri-kns.kube-system
[0:0] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:siYvS7Upiyp0u1OX" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:tBaSCNtQEyHrnWVx" -j cali-pri-_u2Tn2rSoAPffvE7JO6
[0:0] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:9xR4oGrxUy4W17pv" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-tw-cali73f4a3ef1b5 -m comment --comment "cali:lo67y69K6pGE0Gkm" -m comment --comment "Drop if no profiles matched" -j DROP
[2276:1668886] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:bffMt5AKlTlxP9ih" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:FCKogvrtKUWXIJ2J" -m conntrack --ctstate INVALID -j DROP
[0:0] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:bQJ6Gy4PeVpVmBqL" -j MARK --set-xmark 0x0/0x10000
[0:0] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:fcDg6by9BkXDBI8L" -j cali-pri-kns.calico-system
[0:0] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:jWIhQJBI2tZmPhlD" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:DM0bOvEOMCkywYJZ" -j cali-pri-_nzzjLvInId1gPHmQz_
[0:0] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:ZGY4wVQGqLKeJyuN" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A cali-tw-cali8d1cf452527 -m comment --comment "cali:yckfbDAaij_XT7GR" -m comment --comment "Drop if no profiles matched" -j DROP
[4447:363484] -A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
[0:0] -A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Tue Sep 29 12:39:19 2020
